--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "regenerator-runtime": "^0.13.1"
   },
   "dependencies": {
-    "firebase": "^5.8.1"
+    "firebase": "^5.8.1",
+    "sweetalert": "^2.1.2"
   }
 }
