--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.12.1",
     "eslint-plugin-jest": "^22.1.2",
+    "firebase-mock": "^2.2.10",
     "gulp-babel": "^8.0.0",
     "htmlhint": "^0.10.1",
     "jest": "^23.6.0",
